--- a/style.css
+++ b/style.css
@@ -65,13 +65,17 @@ section.hero {
 
 /* PROJECT */
 
-section.projects{
+section.projects {
     display: flex;
     justify-content: center;
 }
 
 .card {
     box-shadow: 1px 1px 5px gray;
+}
+
+.row {
+    margin-top: 50px;
 }
 
 .card:hover {
@@ -81,4 +85,69 @@ section.projects{
 
 .Projects {
     padding-top: 40px;
+}
+
+/* ABOUT ME */
+
+.about_para {
+    text-align: center;
+    font-size: 18px;
+    line-height: 35px;
+}
+
+.about_con {
+    border: 1px solid #e6fffd;
+    border-radius: 40px;
+    background-color: #e6fffd;
+}
+
+.about_pic {
+    width: 200px;
+}
+
+/* CONTACT */
+
+.social-media>a {
+    color: black;
+    text-decoration: none;
+    font-size: 60px;
+    margin: 30px;
+}
+
+section,
+contact .social-media a {
+    padding: 0 0. 5rem;
+    font-size: 1.3rem;
+}
+
+.row {
+    font-size: 16px !important;
+}
+
+.form-control {
+    border-color: #5E3BEE !important;
+
+}
+
+.form-control:focus {
+    border-color: #5E3BEE !important;
+    box-shadow: 0 0 0 0.25rem rgba(94, 59, 238, 0.25) !important;
+    outline: none;
+}
+
+.form-check-input:checked {
+    background-color: #5E3BEE !important;
+    border-color: #5E3BEE !important;
+}
+
+.fa-github:hover {
+    color: #1F2328;
+}
+
+.fa-linkedin:hover {
+    color: #0A66C2;
+}
+
+.fa-instagram:hover {
+    color: #FF0093;
 }
